a lot of small fixes, changed the font to roboto because it looked too light on windows systems

--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,53 +1,48 @@
-/* source-sans-pro-200 - latin */
+/* roboto-300 - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: "Source Sans Pro";
+  font-family: "Roboto";
   font-style: normal;
-  font-weight: 200;
-  src: url("./fonts/source-sans-pro-v21-latin-200.woff2") format("woff2");
+  font-weight: 300;
+  src: url("./fonts/roboto-v30-latin-300.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
-/* source-sans-pro-200italic - latin */
+/* roboto-300italic - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: "Source Sans Pro";
+  font-family: "Roboto";
   font-style: italic;
-  font-weight: 200;
-  src: url("./fonts/source-sans-pro-v21-latin-200italic.woff2") format("woff2");
+  font-weight: 300;
+  src: url("./fonts/roboto-v30-latin-300italic.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
-/* source-sans-pro-regular - latin */
+/* roboto-regular - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: "Source Sans Pro";
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-
-  src: url("./fonts/source-sans-pro-v21-latin-regular.woff2") format("woff2");
+  src: url("./fonts/roboto-v30-latin-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
-/* source-sans-pro-italic - latin */
+/* roboto-italic - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: "Source Sans Pro";
+  font-family: "Roboto";
   font-style: italic;
   font-weight: 400;
-
-  src: url("./fonts/source-sans-pro-v21-latin-italic.woff2") format("woff2");
-  /* Super Modern Browsers */
+  src: url("./fonts/roboto-v30-latin-italic.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
-/* source-sans-pro-700 - latin */
+/* roboto-700 - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: "Source Sans Pro";
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
-
-  src: url("./fonts/source-sans-pro-v21-latin-700.woff2") format("woff2");
+  src: url("./fonts/roboto-v30-latin-700.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
-/* source-sans-pro-700italic - latin */
+/* roboto-700italic - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: "Source Sans Pro";
+  font-family: "Roboto";
   font-style: italic;
   font-weight: 700;
-
-  src: url("./fonts/source-sans-pro-v21-latin-700italic.woff2") format("woff2");
+  src: url("./fonts/roboto-v30-latin-700italic.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
