--- a/src/style.css
+++ b/src/style.css
@@ -20,12 +20,16 @@
   --text-small: 1.1rem;
   --text-middle: 1.5rem;
   --text-big: 2rem;
+
+  /* scroll padding */
+  --scroll-padding: 0;
 }
 
 html {
-  font-family: "Source Sans Pro", "Times New Roman", Times, serif;
-
+  /* font-family: "Source Sans Pro", "Times New Roman", Times, serif; */
+  font-family: "Roboto", sans-serif;
   scroll-behavior: smooth;
+  scroll-padding-top: 6rem;
 }
 
 #pageWrapper {
@@ -53,7 +57,6 @@ button {
 #navbar {
   transition: width var(--transition-time), height var(--transition-time),
     max-width var(--transition-time);
-
   width: 80%;
   background-color: var(--dsb-dark);
   height: 10rem;
@@ -75,6 +78,8 @@ button {
   height: 100%;
   justify-content: flex-start;
   align-items: center;
+}
+#navbarListScrolled {
 }
 
 .listItem {
@@ -125,8 +130,9 @@ button {
 }
 
 #logoContainer.logoContainerScrolled {
-  width: 5rem;
-  height: 5rem;
+  /* 4.25rem so that with 0.25 rem it matches the size of the navbar links */
+  width: 4.25rem;
+  height: 4.25rem;
   top: 0;
   border-width: 0.25rem;
 }
@@ -165,8 +171,7 @@ button {
   transition: var(--transition-time);
 }
 .listItem:hover .listItemLinkImage {
-  width: 61px;
-  height: 61px;
+  transform: scale(1.25);
 }
 
 .navbarListContainer {
@@ -181,7 +186,7 @@ button {
   display: none;
   position: absolute;
   top: 50%;
-  left: 85%;
+  left: 92%;
   transform: translate(-50%, -50%);
   height: 57%;
   width: 2.5rem;
@@ -206,7 +211,7 @@ button {
 }
 
 #navbarButton span:nth-child(1) {
-  top: 10%;
+  top: 12%;
 }
 
 #navbarButton span:nth-child(2) {
@@ -384,11 +389,15 @@ button {
 }
 
 #solutions {
-  color: white;
+  color: black;
   font-weight: bolder;
   font-size: 1.5rem;
-  -webkit-text-stroke: 1px black;
-  text-shadow: -3px 0px 0px rgba(0, 0, 0, 1);
+  /* -webkit-text-stroke: 1px black;
+  text-shadow: -3px 0px 0px rgba(0, 0, 0, 1); */
+  /* text-shadow: -3px -3px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000; */
+  text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff,
+    1px 1px 0 #fff;
 }
 
 #aboutUsTextLight {
@@ -403,8 +412,9 @@ button {
 #ebSection {
   /* ON MOBILE THIS IMAGE IS THE FIRST LCP SO I USED INLINE STYLE ON THE ELEMENT TO SET THE BACKGROUND IMAGE BECAUSE WEBPACK GENERATES A HASH FOR THIS IMAGE EVERYTIME SO WE ACCESS IT DIRECTLY FROM THE DIST FOLDER WITH ITS ORIGINAL NAME */
 
-  /* background-image: url(/public/assets/ebSection/ebSectionBackground.webp); */
   background-color: var(--dsb-ebWhite);
+  background-image: url(/public/assets/ebSection/ebSectionBackground.webp);
+
   background-size: cover;
   width: 100%;
   display: flex;
@@ -454,6 +464,12 @@ button {
     rgba(8, 115, 199, 1) 30%,
     rgba(56, 221, 207, 1) 100%
   );
+  background: linear-gradient(
+    to top right,
+    rgba(8, 115, 199, 1) 30%,
+    rgba(56, 221, 207, 1) 100%
+  );
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -554,23 +570,28 @@ button {
   width: 400px;
 }
 
-#banzaimanGameImageContainer {
+/* #banzaimanGameImageContainer {
   width: 560px;
   height: 335px;
-}
+  border: 5px solid white;
+  border-radius: 10px;
+} */
 
 #banzaimanGameImage {
   width: 560px;
   height: 335px;
+  border: 5px solid white;
+  border-radius: 10px;
 }
 
 #banzaimanTabSelector {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid black;
   width: 450px;
   height: 75px;
+  border-radius: 0px 0px 10px 10px;
+  overflow: hidden;
 }
 
 .tabSelectorButton {
@@ -587,9 +608,13 @@ button {
   background-repeat: no-repeat;
 }
 
+.tabSelectorButtonSelected {
+  background: #48aa2f;
+}
+
 .buttonImage {
-  width: 100%;
-  height: 100%;
+  width: 80%;
+  height: 80%;
 }
 
 .buttonImageSelected {
@@ -646,7 +671,7 @@ button {
 #googlePlayBadge {
   margin-top: var(--margin-small);
   margin-bottom: var(--margin-small);
-  width: 300px;
+  width: 200px;
   /* height: 116px; */
 }
 /* 
@@ -677,12 +702,11 @@ button {
   margin-bottom: var(--margin-big);
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
 }
 
 #employeeSectionHeader {
-  width: 30rem;
-  height: 95%;
+  height: 80%;
 }
 
 #employeeContainer {
@@ -698,8 +722,8 @@ button {
 .employeeCard {
   background-color: var(--dsb-fullWhite);
 
-  width: 20rem;
-  height: 15rem;
+  width: 21rem;
+  height: 16rem;
   position: relative;
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.3);
@@ -712,7 +736,7 @@ button {
 
 .employeeImage {
   position: absolute;
-  bottom: 13rem;
+  bottom: 14rem;
   height: 195px;
 }
 
@@ -725,22 +749,22 @@ button {
 .employeeName {
   margin-top: 2rem;
   font-size: 2rem;
-  font-weight: lighter;
+  font-weight: 300;
   font-style: italic;
 }
 .employeeTitle {
   font-size: var(--text-middle);
 
   font-style: italic;
-  font-weight: lighter;
+  font-weight: 300;
 }
 .employeeDescription {
-  font-size: var(--text-small);
+  font-size: var(--text-xs);
   margin-right: 2rem;
   margin-left: 2rem;
   margin-top: 2rem;
-  font-weight: lighter;
   line-height: 1.1rem;
+  font-weight: 300;
 }
 /*
 -----------------FOOTER-----------------
@@ -898,6 +922,7 @@ button {
   #logoContainer {
     margin-left: var(--margin-small);
     margin-right: var(--margin-xs);
+    margin-left: 0;
     width: 7rem;
     height: 7rem;
     top: 0;
@@ -1020,6 +1045,11 @@ button {
 @media only screen and (max-width: 600px) {
   /* navbar */
 
+  html {
+    scroll-padding-top: 3rem;
+    font-size: 90%;
+  }
+
   #navbar {
     height: 3rem;
   }
@@ -1044,10 +1074,11 @@ button {
   }
 
   #logoContainer {
+    top: 0;
     width: 3rem;
     height: 3rem;
-    border-width: 0.25rem;
     border: none;
+    margin: 0.5rem;
   }
 
   #logoContainer.logoContainerScrolled {
@@ -1059,6 +1090,7 @@ button {
   #logoSvg {
     width: 75%;
     height: 75%;
+    padding-top: 2px;
   }
   #logoSvg.logoSvgScrolled {
     width: 75%;
@@ -1066,6 +1098,7 @@ button {
   }
 
   #mainMenu {
+    animation: menu-slide-in 0.25s both;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1078,11 +1111,30 @@ button {
     z-index: 10;
   }
 
+  @keyframes menu-slide-in {
+    0% {
+      transform: translateX(1000px);
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
+
   #mainMenuOpacityLayer {
     display: flex;
     width: 25%;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
+    animation: menuOpacity-slide-in 0.5s both;
+  }
+
+  @keyframes menuOpacity-slide-in {
+    0% {
+      opacity: 0%;
+    }
+    100% {
+      opacity: 100%;
+    }
   }
 
   .mainMenuListItem {
@@ -1118,6 +1170,11 @@ button {
     border: none;
   }
 
+  #aboutUsText {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+
   #aboutUsTextContainer {
     align-items: flex-start;
     margin-left: 1rem;
@@ -1139,7 +1196,6 @@ button {
 
   #employeeSectionHeader {
     width: 20rem;
-    rotate: 16.3deg;
   }
 
   /* banzaiman Section */
@@ -1159,15 +1215,11 @@ button {
     width: 80%;
     height: 25%;
   }
-
-  #banzaimanGameImageContainer {
-    width: 100%;
-    height: 100%;
-  }
-
   #banzaimanGameImage {
     width: 100%;
     height: 100%;
+    border: none;
+    border-radius: 0px;
   }
 
   #banzaimanTabSelector {
@@ -1175,6 +1227,9 @@ button {
     height: 4rem;
   }
   /* eb section */
+  #ebSection {
+    background-image: none;
+  }
 
   #ebHeader {
     width: 95%;
@@ -1183,8 +1238,6 @@ button {
     align-items: center;
     width: 100%;
     padding-bottom: 1.5rem;
-  }
-  .card {
   }
 
   #banzaimanText {
@@ -1215,7 +1268,7 @@ button {
 
   /* navbar */
   #logoContainer {
-    margin-left: var(--margin-xs);
+    margin-left: 1%;
   }
 
   /* eb section */
@@ -1254,7 +1307,6 @@ button {
   }
 
   .employeeCard {
-    width: 17rem;
     width: 100%;
   }
 }
